# ai-crypto-hedge-fund-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT_RU.md  CODEX_PROMPT.md  Dockerfile  LICENSE  MANIFEST.md  MASTER_PROMPT_CODEX_TEAMLEAD.md  Makefile  README.md  README_RU.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: final_test_lock.json  final_test_lock.json.metadata.json
artifacts/equity/: level_1.parquet  level_2.parquet  level_3.parquet  level_4.parquet  level_5.parquet
artifacts/fills/: level_1.parquet  (+5 more)
configs/: default.yaml  fast.yaml  validation_selected.yaml
data/: README.md
docs/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  03_COMPONENTS_AND_FLOW.md  04_DATA_AND_ARTIFACTS.md  04_EXPERIMENT_PROTOCOL.md  05_EXPERIMENT_PROTOCOL.md  06_ACCEPTANCE_CRITERIA.md  06_REPRODUCIBILITY_AND_SUBMISSION.md  07_LIMITATIONS_AND_ATTRIBUTION.md  07_PRESENTATION_OUTLINE.md  08_BACKTESTING.md  08_REFERENCE_PROJECTS_AND_LICENSES.md  09_CONFIG_AND_INTERFACES.md  09_MODEL_TRAINING.md  10_AGENT_ENSEMBLE.md  11_RISK_MANAGEMENT.md  12_FINAL_TEST_FREEZE_AND_SUBMISSION.md  13_IMPLEMENTATION_STRATEGY_AND_STAGE_GATES.md  README.md  STAGE_11_FINAL_TEST_INCIDENT.md  STAGE_14_ML_QUANT_AUDIT_REMEDIATION_ADDENDUM.md
notebooks/: ai_crypto_hedge_fund.ipynb
presentation/: deck.md
reports/: data_card.md  final_report.md  ml_quant_model_data_audit_2026-06-21.md  stage14_model_transparency_context.md
scripts/: check_file_size.py  download_data.py  freeze_data.py  setup_full_run.sh  validate_data.py
(+335 files in other folders)
