[project]
name = "crypto-hedge-fund"
version = "0.1.0"
description = "Educational AI crypto hedge fund research system."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "AI Crypto Hedge Fund Contributors" }]
dependencies = [
  "arch>=7.2.0",
  "ccxt>=4.4.0",
  "matplotlib>=3.9.0",
  "nbclient>=0.10.0",
  "nbconvert>=7.16.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.14.0",
  "statsmodels>=0.14.0",
]

[project.scripts]
crypto-hedge-fund = "crypto_hedge_fund.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_hedge_fund"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
